<resources>
    <!--MAIN-->
    <string name="app_name">Playlist maker</string>
    <string name="main_menu_search">Поиск</string>
    <string name="main_menu_media">Медиатека</string>
    <string name="main_menu_settings">Настройки</string>
    <!--SETTINGS-->
    <string name="settings_menu_dark_theme">Темная тема</string>
    <string name="settings_menu_share">Поделиться приложением</string>
    <string name="settings_menu_support">Написать в поддержку</string>
    <string name="settings_menu_user_agreement">Пользовательское соглашение</string>
    <string name="settings_share_link">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="settings_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_email_student">karev.valera2013@yandex.ru</string>
    <string name="settings_offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <!--COMMON-->
    <string name="empty_artist_name">Имя артиста не определено</string>
    <string name="empty_track_name">Название трека не определено</string>
    <string name="empty_playlist">В плейлисте пока нет треков</string>
    <string name="check_network">Проверьте подключение интернета</string>
    <string name="app_back">Назад</string>
    <string name="update_request">Обновить</string>
    <string name="create">Создать</string>
    <string name="title_field">Название*</string>
    <string name="description_field">Описание</string>
    <string name="playlist_maker">Плейлист</string>
    <string name="playlist_maker_create">создан</string>
    <string name="playlist_maker_list_title">Спулае мулае Спулае мулае Спулае мулае Спулае мулае Спулае мулае Спулае мулае</string>
    <string name="playlist_maker_list_count_tracks">98 треков 98 треков 98 треков 98 треков</string>
    <string name="playlist_detail_share">Поделиться</string>
    <string name="playlist_detail_edit">Редактировать информацию</string>
    <string name="playlist_detail_remove">Удалить плейлист</string>
    <!--REQUEST_ERROR-->
    <string name="search_error_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_error_nothing_found">Ничего не нашлось</string>
    <!--SEARCH-->
    <string name="search_results">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <!--TOOLS_VAR-->
    <string name="track_name">Yesterday (Remastered 2009) Yesterday (Remastered 2009) Yesterday (Remastered 2009) Yesterday (Remastered 2009)</string>
    <string name="artist_name">The Beatles The Beatles The Beatles The Beatles The Beatles The Beatles</string>
    <string name="county_name">Страна</string>
    <string name="county_value">Великобритания</string>
    <string name="genre_name">Жанр</string>
    <string name="genre_value">Rock</string>
    <string name="year_name">Год</string>
    <string name="year_value">1995 1995 1995 1995 1995 1995</string>
    <string name="album_name">Альбом</string>
    <string name="album_value">Yesterday (Remastered 2009) Yesterday (Remastered 2009) Yesterday (Remastered 2009)</string>
    <string name="duration_name">Продолжительность</string>
    <string name="duration_value">Продолжительность Продолжительность Продолжительность Продолжительность</string>
    <string name="timer_value">00:00</string>
    <!--CONTENT_DESCRIPTION-->
    <string name="back_description">Назад</string>
    <string name="to_favourite">В избранное</string>
    <string name="to_playlist">В плейлист</string>
    <string name="play">Слушать</string>
    <string name="poster">Обложка</string>
    <!--TRACK_INFO-->
    <string name="play_error">Что-то пошло не так. Повторите попытку позже.</string>
    <!--MEDIA-->
    <string name="favorites_tab">Избранные треки</string>
    <string name="playlist_tab">Плейлисты</string>
    <string name="favorites_empty">Ваша медиатека пуста</string>
    <string name="playlist_empty">Вы не создали \nни одного плейлиста</string>
    <string name="playlist_add">Новый плейлист</string>
    <string name="playlist_image_empty_tag">Empty</string>
    <string name="playlist_image_not_empty_tag">Not empty</string>
    <string name="playlist_add_to_playlist">Добавить в плейлист</string>
    <!--ALERT_MESSAGES-->
    <string name="alert_button_ok">Ок</string>
    <string name="playlist_message_title">Завершить создание плейлиста?</string>
    <string name="playlist_message_description">Все несохраненные данные будут потеряны</string>
    <string name="playlist_message_done">Завершить</string>
    <string name="playlist_message_cancel">Отмена</string>
    <string name="playlist_add_track">Добавлено в плейлист %1$s</string>
    <string name="playlist_track_already_add">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_detail_title_delete_track">Удалить трек</string>
    <string name="playlist_detail_message_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="playlist_detail_delete_track">Удалить</string>
    <string name="playlist_detail_delete_empty_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="playlist_detail_title_delete_playlist">Удалить плейлист</string>
    <string name="playlist_detail_message_delete_playlist">Хотите удалить плейлист «%1$s»?</string>
    <string name="playlist_detail_delete_no">Нет</string>
    <string name="playlist_detail_delete_yes">Да</string>
    <string name="playlist_update_button">Сохранть</string>
    <string name="playlist_update_edit_title">Редактировать</string>


    <plurals name="playlist_track_count">
        <item quantity="zero">0 треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>