<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/app_title_size" />

    </FrameLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/main_menu_search"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        app:cornerRadius="@dimen/button_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/button_ico_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/media_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/main_menu_media"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        app:cornerRadius="@dimen/button_radius"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/button_ico_padding"
        app:iconTint="@color/black" />
    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/main_menu_settings"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        android:layout_marginTop="@dimen/button_margin"
        app:cornerRadius="@dimen/button_radius"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/button_ico_padding"
        app:iconTint="@color/black"
        />
</LinearLayout>