<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playlistMakerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playlist.ui.fragments.PlaylistMaker">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@null"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <com.google.android.material.button.MaterialButton
        style="@style/ActionButton"
        android:id="@+id/create_playlist"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:text="@string/create"
        android:layout_marginBottom="32dp"
        android:enabled="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomTextInput"
        android:id="@+id/wrapper_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/description_field"

        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_title"
        app:layout_constraintBottom_toTopOf="@+id/create_playlist"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomTextInput"
        android:id="@+id/wrapper_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/title_field"


        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/poster"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        style="@style/BackImageStyle"
        android:id="@+id/buttonBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/back_description"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TitleText"
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_add"
        android:paddingStart="12dp"
        android:paddingEnd="30dp"

        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/buttonBack"
        app:layout_constraintTop_toTopOf="@+id/buttonBack"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"/>

    <ImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerInside"
        android:src="@drawable/empty_poster"
        android:background="@drawable/bg_corner_dash"

        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/buttonBack"
        app:layout_constraintDimensionRatio="h,1:1"/>



    <TextView
        android:id="@+id/floatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:clickable="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:textColor="?attr/colorPrimaryVariant"
        android:padding="16dp"
        android:gravity="center"
        android:textSize="14sp"
        android:textFontWeight="400"
        android:visibility="gone"
        android:fontFamily="@font/ys_display_regular"
        app:srcCompat="@android:drawable/ic_menu_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/track_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>